Fix docker compose